--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
                                 <a class="img-popup" href="assets/imgs/atlethics7.gif"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">atlethics7</p>
                                 </div>
                             </div> 
                         </div>                         
@@ -641,7 +641,7 @@
                                 <a class="img-popup" href="assets/imgs/atletics1.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">atletics1</p>
                                 </div>
                             </div>   
                         </div>             
@@ -653,7 +653,7 @@
                                 <a class="img-popup" href="assets/imgs/atlectis2.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">atletics2</p>
                                 </div>
                             </div> 
                         </div>                         
@@ -665,7 +665,7 @@
                                 <a class="img-popup" href="assets/imgs/atlectics6.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">atletics6</p>
                                 </div>
                             </div> 
                         </div>                         
@@ -677,19 +677,7 @@
                                 <a class="img-popup" href="assets/imgs/atletics3.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
-                                </div>
-                            </div> 
-                        </div>                         
-                    </div>
-                    <div class="col-md-6 col-lg-4 Athletics">
-                        <div class="portfolio-item">
-                            <img src="assets/imgs/atletics5.jpg" class="img-fluid" alt="...">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atletics5.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">atletics3</p>
                                 </div>
                             </div> 
                         </div>                         
@@ -701,11 +689,36 @@
                                 <a class="img-popup" href="assets/imgs/atletics4.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">atletics4</p>
                                 </div>
                             </div> 
                         </div>                         
                     </div>
+                    <div class="col-md-6 col-lg-4 Athletics">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/atletics5.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/atletics5.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics5</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+                    <div class="col-md-6 col-lg-4 Athletics">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/atletics8.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/atletics8.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics8</p>
+                                </div>
+                            </div> 
+                        </div>                         
+                    </div>
+
 
 
                     <div class="col-md-6 col-lg-4 Drawing">
@@ -715,7 +728,7 @@
                                 <a class="img-popup" href="assets/imgs/paint4.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">paint4</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -727,7 +740,7 @@
                                 <a class="img-popup" href="assets/imgs/paint1.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">paint1</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -739,7 +752,7 @@
                                 <a class="img-popup" href="assets/imgs/paint3.png"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">paint3</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -751,7 +764,7 @@
                                 <a class="img-popup" href="assets/imgs/paint5.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">paint5</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -763,7 +776,7 @@
                                 <a class="img-popup" href="assets/imgs/paint2.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">paint2</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -775,7 +788,7 @@
                                 <a class="img-popup" href="assets/imgs/paint6.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">paint6</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -788,7 +801,7 @@
                                 <a class="img-popup" href="assets/imgs/dance.gif"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">dance</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -800,7 +813,7 @@
                                 <a class="img-popup" href="assets/imgs/dance1.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">dance1</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -812,7 +825,7 @@
                                 <a class="img-popup" href="assets/imgs/dance2.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">dance2</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -824,7 +837,7 @@
                                 <a class="img-popup" href="assets/imgs/dance3.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">dance3</p>
                                 </div>
                             </div>
                         </div>                                                     
@@ -836,7 +849,7 @@
                                 <a class="img-popup" href="assets/imgs/dance5.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
-                                    <p class="subtitle">Expedita corporis doloremque velit in totam!</p>
+                                    <p class="subtitle">dance5</p>
                                 </div>
                             </div>
                         </div>                                                     
