--- a/index.html
+++ b/index.html
@@ -708,9 +708,9 @@
                     </div>
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/atletics8.jpg" class="img-fluid" alt="...">
+                            <img src="assets/imgs/atlethics8.jpg.crdownload" class="img-fluid" alt="...">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atletics8.jpg"></a>
+                                <a class="img-popup" href="assets/imgs/atlethics8.jpg.crdownload"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">atletics8</p>
@@ -759,24 +759,24 @@
                     </div>
                     <div class="col-md-6 col-lg-4 Drawing">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/paint5.jpg" class="img-fluid" alt="...">
-                            <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/paint5.jpg"></a>
-                                <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint5</p>
-                                </div>
-                            </div>
-                        </div>                                                     
-                    </div>
-                    <div class="col-md-6 col-lg-4 Drawing">
-                        <div class="portfolio-item">
                             <img src="assets/imgs/paint2.jpg" class="img-fluid" alt="...">
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint2.jpg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">paint2</p>
+                                </div>
+                            </div>
+                        </div>                                                     
+                    </div>
+                    <div class="col-md-6 col-lg-4 Drawing">
+                        <div class="portfolio-item">
+                            <img src="assets/imgs/paint5.jpg" class="img-fluid" alt="...">
+                            <div class="content-holder">
+                                <a class="img-popup" href="assets/imgs/paint5.jpg"></a>
+                                <div class="text-holder">
+                                    <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint5</p>
                                 </div>
                             </div>
                         </div>                                                     
