--- a/index.html
+++ b/index.html
@@ -708,9 +708,9 @@
                     </div>
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
-                            <img src="assets/imgs/atlethics8.jpg.crdownload" class="img-fluid" alt="...">
+                            <img src="assets/imgs/atlectics8.jpeg" class="img-fluid" alt="...">
                             <div class="content-holder">
-                                <a class="img-popup" href="assets/imgs/atlethics8.jpg.crdownload"></a>
+                                <a class="img-popup" href="assets/imgs/atlectics8.jpeg"></a>
                                 <div class="text-holder">
                                     <h6 class="title">WEB</h6>
                                     <p class="subtitle">atletics8</p>
