--- a/index.html
+++ b/index.html
@@ -613,13 +613,24 @@
     <section class="section bg-custom-gray" id="hobbies">
         <div class="container">
             <h1 class="mb-5"><span class="text-danger">Interests</span> / Hobbies</h1>
-            <p> falta ainda a imagem de inicio de secção, fotos e escrever introdução: algo geral dos hobbies, falando do desporto, artes, musica, viagens. Falar dos grupos de associaçoes bem como do que cada hobbie me trouxe, e achivements</p>
+            <!-- <p> falta ainda a imagem de inicio de secção, fotos e escrever introdução: algo geral dos hobbies, falando do desporto, artes, musica, viagens. Falar dos grupos de associaçoes bem como do que cada hobbie me trouxe, e achivements</p> -->
             <div class="portfolio">
                 <div class="filters">
                     <a href="#" data-filter=".Athletics" class="active">Athletics</a>
                     <a href="#" data-filter=".Drawing">Drawing</a>
                     <a href="#" data-filter=".Lindy">Lindy Hop</a>
                 </div>
+
+                <div class="portfolio-container Athletics">
+                    <p>atletismo</p>
+                </div>
+                <div class="portfolio-container Lindy">
+                    <p>Dança</p>
+                </div>
+                <div class="portfolio-container Drawing">
+                    <p>desenho</p>
+                </div>
+
                 <div class="portfolio-container">
                     <div class="col-md-6 col-lg-4 Athletics">
                         <div class="portfolio-item">
