--- a/index.html
+++ b/index.html
@@ -621,13 +621,13 @@
                     <a href="#" data-filter=".Lindy">Lindy Hop</a>
                 </div>
 
-                <div class="portfolio-container Athletics">
+                <div class="descripcion Athletics">
                     <p>atletismo</p>
                 </div>
-                <div class="portfolio-container Lindy">
+                <div class="descripcion Lindy">
                     <p>Dança</p>
                 </div>
-                <div class="portfolio-container Drawing">
+                <div class="descripcion Drawing">
                     <p>desenho</p>
                 </div>
 
