--- a/index.html
+++ b/index.html
@@ -621,14 +621,14 @@
                     <a href="#" data-filter=".Lindy">Lindy Hop</a>
                 </div>
 
-                <div class="descripcion Athletics">
-                    <p>atletismo</p>
+                <div class="descripcion">
+                    <p class="Athletics">atletismo</p>
                 </div>
-                <div class="descripcion Lindy">
-                    <p>Dança</p>
+                <div class="descripcion">
+                    <p class="Lindy">Dança</p>
                 </div>
-                <div class="descripcion Drawing">
-                    <p>desenho</p>
+                <div class="descripcion">
+                    <p class="Drawing">desenho</p>
                 </div>
 
                 <div class="portfolio-container">
