--- a/index.html
+++ b/index.html
@@ -622,16 +622,16 @@
                 </div>
 
                 <div class="descripcion">
-                    <p class="Athletics">A passion for sports is something that is part of my essence. In the past I competed at federated level in swimming (2009 - 2014) and then athletics (2013 - 2019). The constant efforts to overcome ourselves every day and the sportsmanship, even among supposed rivals, are what charm me most about the world of sport.
-                        As a federated athlete, I was part of the club founded by former Olympic athlete Manuela Machado: <a href="https://www.instagram.com/cyclones_sanitop/" target="_blank" rel="CYCLONES">Cyclones Sanitop</a>.</p>
+                    <p class="Athletics"> The passion for sports is something that is part of my essence. In the past I competed at federated level in swimming (2009 - 2014) and then in athletics (2013 - 2019). The constant efforts to overcome ourselves every day and the sportsmanship, even among supposed rivals, are what charm me most about the world of sport.
+                        As a federated athlete, I was part of the club founded by a portugues former olympic athlete, Manuela Machado: <a href="https://www.instagram.com/cyclones_sanitop/" target="_blank" rel="CYCLONES">Cyclones Sanitop</a>.</p>
                 </div>
                 <div class="descripcion">
-                    <p class="Lindy">Lindy Hop is a social dance that combines elements of jazz, tap, breakaway, and Charleston, and is known for being energetic, fun, and improvisational. 
+                    <p class="Lindy"> Lindy Hop is a social dance that combines elements of jazz, tap, breakaway, and Charleston, and is known for being energetic, fun, and improvisational. 
                         Lindy Hop was initially popular among the African American community in Harlem and gained widespread recognition thanks to the film <a href="https://www.youtube.com/watch?v=ahoJReiCaPk" target="_blank" rel="Hellzapoppin">"Hellzapoppin"(1941)</a>. 
                         I currently have classes and go to some events at  <a href="https://www.instagram.com/botaswing/" target="_blank" rel="botaswing">Bota Swing</a>.</p>
                 </div>
                 <div class="descripcion">
-                    <p class="Drawing">Manual arts are a less regular hobby in my routine, but I usually enjoy making them, for example, to give personalised gifts to family/friends on special dates. I've been learning more about drawing for myself, doing some research into how light and shallows work, and some drawing techniques. It's a very meticulous process but very rewarding in the end.</p>
+                    <p class="Drawing"> Manual arts are a less regular hobby in my routine, but I usually enjoy making them, for example, to give personalised gifts to family/friends on special dates. I've been learning more about drawing for myself, doing some research into how light and shallows work, and some drawing techniques. It's a very meticulous process but very rewarding in the end.</p>
                 </div>
 
                 <div class="portfolio-container">
@@ -641,8 +641,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atlethics7.gif"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atlethics7</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atlethics7</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -653,8 +653,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atletics1.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics1</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics1</p> -->
                                 </div>
                             </div>   
                         </div>             
@@ -665,8 +665,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atlectis2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics2</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics2</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -677,8 +677,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atlectics6.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics6</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics6</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -689,8 +689,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atletics3.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics3</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics3</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -701,8 +701,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atletics4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics4</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics4</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -713,8 +713,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atletics5.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics5</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics5</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -725,8 +725,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/atlectics8.jpeg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">atletics8</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">atletics8</p> -->
                                 </div>
                             </div> 
                         </div>                         
@@ -738,8 +738,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint4.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint4</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint4</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -750,8 +750,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint1</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint1</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -762,8 +762,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint3.png"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint3</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint3</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -774,8 +774,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint2</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint2</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -786,8 +786,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint5.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint5</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint5</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -798,8 +798,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/paint6.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">paint6</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">paint6</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -811,8 +811,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dance.gif"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">dance</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">dance</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -823,8 +823,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dance1.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">dance1</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">dance1</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -835,8 +835,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dance2.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">dance2</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">dance2</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -847,8 +847,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dance3.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">dance3</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">dance3</p> -->
                                 </div>
                             </div>
                         </div>                                                     
@@ -859,8 +859,8 @@
                             <div class="content-holder">
                                 <a class="img-popup" href="assets/imgs/dance5.jpg"></a>
                                 <div class="text-holder">
-                                    <h6 class="title">WEB</h6>
-                                    <p class="subtitle">dance5</p>
+                                    <!-- <h6 class="title">WEB</h6>
+                                    <p class="subtitle">dance5</p> -->
                                 </div>
                             </div>
                         </div>                                                     
