--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
      </div>
     <section class="section bg-custom-gray" id="hobbies">
         <div class="container">
-            <h1 class="mb-5"><span class="text-danger">Interests</span> / Hobbies</h1>
+            <h1 class="mb-5"><span class="text-danger">My</span> Hobbies</h1>
             <!-- <p> falta ainda a imagem de inicio de secção, fotos e escrever introdução: algo geral dos hobbies, falando do desporto, artes, musica, viagens. Falar dos grupos de associaçoes bem como do que cada hobbie me trouxe, e achivements</p> -->
             <div class="portfolio">
                 <div class="filters">
@@ -869,6 +869,40 @@
                 </div> 
             </div>  
         </div>            
+    </section>
+
+    <section class="section">
+        <div class="container">
+            <h1 class="mb-5">Volunteer</h1>
+
+            <div class="row align-items-center">
+                <div class="col-md-6 col-lg-3">
+                    <div class="price-card text-center mb-4">
+                        <h3 class="price-card-title">Cyclones Sports</h3>
+                        <span class="line"></span>
+                        <p>Support in the organization of events, organized by Cyclones Sports, such as the “Manuela Machado Half Marathon”. 
+                        Cyclones Sports is a young and dynamic team capable of taking on any challenge when it comes to supporting and managing the organization of sporting events.</p>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+
+            <div class="row align-items-center">
+                <div class="col-md-6 col-lg-3">
+                    <div class="price-card text-center mb-4">
+                        <h3 class="price-card-title">LC Party Kids</h3>
+                        <span class="line"></span>
+                        <p>This project was founded by a friend of mine, LC Party Kids is essentially aimed at entertaining children at events such as birthdays, weddings and baptisms.</p>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+
+
+        </div>
+
     </section>
     <!-- End of portfolio section -->
 
