--- a/index.html
+++ b/index.html
@@ -875,10 +875,10 @@
         <div class="container">
             <h1 class="mb-5">Volunteer</h1>
 
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-md-6 col-lg-3">
                     <div class="price-card text-center mb-4">
-                        <h3 class="price-card-title">Cyclones Sports</h3>
+                        <h4 class="mt-2">Cyclones Sports</h4>
                         <span class="line"></span>
                         <p>Support in the organization of events, organized by Cyclones Sports, such as the “Manuela Machado Half Marathon”. 
                         Cyclones Sports is a young and dynamic team capable of taking on any challenge when it comes to supporting and managing the organization of sporting events.</p>
@@ -888,10 +888,10 @@
                 </div>
             </div>
 
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-md-6 col-lg-3">
                     <div class="price-card text-center mb-4">
-                        <h3 class="price-card-title">LC Party Kids</h3>
+                        <h4 class="mt-2">LC Party Kids</h4>
                         <span class="line"></span>
                         <p>This project was founded by a friend of mine, LC Party Kids is essentially aimed at entertaining children at events such as birthdays, weddings and baptisms.</p>
                     </div>
