--- a/index.html
+++ b/index.html
@@ -875,7 +875,7 @@
         <div class="container">
             <h1 class="mb-5">Volunteer</h1>
 
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-6 col-lg-3">
                     <div class="price-card text-center mb-4">
                         <h4 class="mt-2">Cyclones Sports</h4>
@@ -883,8 +883,6 @@
                         <p>Support in the organization of events, organized by Cyclones Sports, such as the “Manuela Machado Half Marathon”. 
                         Cyclones Sports is a young and dynamic team capable of taking on any challenge when it comes to supporting and managing the organization of sporting events.</p>
                     </div>
-                </div>
-
                 </div>
                 <div class="col-md-6 col-lg-3">
                     <div class="price-card text-center mb-4">
