--- a/index.html
+++ b/index.html
@@ -880,9 +880,9 @@
                     <div class="price-card mb-4">
                         <!-- <h4 class="mt-2">Cyclones Sports</h4>
                         <span class="line"></span> -->
-                        <!-- <div class="img-holder"> -->
+                        <div class="img-holder">
                             <img src="assets/imgs/cyclones.png" alt="Cyclones">
-                        <!-- </div> -->
+                        </div>
 
                         <p>Support in the organization of events, organized by Cyclones Sports, such as the “Manuela Machado Half Marathon”. 
                         Cyclones Sports is a young and dynamic team capable of taking on any challenge when it comes to supporting and managing the organization of sporting events.</p>
@@ -892,7 +892,9 @@
                     <div class="price-card mb-4">
                         <!-- <h4 class="mt-2">LC Party Kids</h4>
                         <span class="line"></span> -->
+                        <div class="img-holder">
                         <img src="assets/imgs/lc_party.png" alt="LC Party Kids">
+                        </div>
                         <p>This project was founded by a friend of mine, LC Party Kids is essentially aimed at entertaining children at events such as birthdays, weddings and baptisms.In this sense, when necessary, I support some of the biggest events in this project.</p>
                     </div>
                 </div>
