--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                 <a href="https://www.unavarra.es/home" target="_blank" rel="UPNA">Public University of Navarra | Pamplona, ES</a>
                             </p>
 
-                            <ul> Courses:
+                            <ul> <b>Courses:</b>
                                 <li>Environmental Economics </li>
                                 <li>Health Economics</li>
                                 <li>International Trade Management</li>
@@ -306,7 +306,7 @@
 
     <section class="section">
         <div class="container">
-            <h2 class="mb-5">Student<span class="text-danger"> Groups</span></h2>
+            <h2 class="mb-5"><span class="text-danger">Student</span> Groups</h2>
 
             <div class="row">
                 <div class="blog-card">
@@ -911,7 +911,7 @@
 
     <section class="section">
         <div class="container">
-            <h1 class="mb-5"><span class="text-danger">Associations</span> / Volunteering</h1>
+            <h1 class="mb-5">Associations / <span class="text-danger">Volunteering</span></h1>
 
             <div class="row align-items-center">
                 <div class="col-md-6 col-lg-5">
