--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Mariana Sousa</h1>
                 <h6 class="header-mono" >Engineering and Management | IT Consultant </h6>
-                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Print Resume</button>
+                <button class="btn btn-primary btn-rounded"><i class="ti-printer pr-2"></i>Download My CV</button>
             </div>
         </div>
     </header>
@@ -284,7 +284,8 @@
                                 <a href="https://www.unavarra.es/home" target="_blank" rel="UPNA">Public University of Navarra | Pamplona, ES</a>
                             </p>
 
-                            <ul> <b>Courses:</b>
+                            <p>Courses:</p>
+                            <ul> 
                                 <li>Environmental Economics </li>
                                 <li>Health Economics</li>
                                 <li>International Trade Management</li>
@@ -400,7 +401,49 @@
                         </div>
                         <div class="card-body">
                            
-                           <P>SAP ISU; HTML; CSS; Microsoft Excel; VBA; Phyton; SQL; SPSS; RStudio; Solidworks; Autocad; Anylogic; Minitab; Tableau; LaTeX; Outsystems (basics)</P>
+                           <p>1. Programming and Scripting:</p>
+    <ul>
+        <li>SAP ABAP</li>
+        <li>SQL</li>
+        <li>VBA</li>
+        <li>Python</li>
+    </ul> 
+
+    </div>
+
+    <div class="card-body"> 
+
+    <p>2. Web Development:</p>
+    <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript (basics)</li>
+    </ul>
+
+</div>
+
+    <!-- <h1>3. Data Analysis and Statistical Tools:</h1>
+    <ul>
+        <li>Microsoft Excel</li>
+        <li>VBA Excel</li>
+        <li>SPSS</li>
+        <li>RStudio</li>
+        <li>Tableau</li>
+    </ul>
+
+    <h1>4. Engineering and Design Software:</h1>
+    <ul>
+        <li>SolidWorks</li>
+        <li>AutoCAD</li>
+    </ul>
+
+    <h1>5. Others:</h1>
+    <ul>
+        <li>AnyLogic</li>
+        <li>LaTex</li>
+        <li>Bizagi</li>
+    </ul> -->
+                        
                         </div>
                     </div>
                 </div>
@@ -414,17 +457,17 @@
                             </div>
                         </div>
                         <div class="card-body pb-2">
-                           <h6>English</h6>
+                           <h6>Portugues</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 90%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
-                            <h6>French</h6>
+                            <h6>English</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                             <h6>Spanish</h6>
                             <div class="progress mb-3">
-                                <div class="progress-bar bg-danger" role="progressbar" style="width: 67%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                                <div class="progress-bar bg-danger" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                     </div>
